Build using Java 25